--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -11,6 +11,7 @@
     align-items: center;
     width: 100%;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
+    z-index: 4;
     .nav-box {
         width: 100%;
         height: 100%;
