--- a/src/assets/sass/_util.scss
+++ b/src/assets/sass/_util.scss
@@ -47,7 +47,7 @@
   user-select: none;
 }
 
-@mixin custom-scrollbar($radius: 0) {
+@mixin custom-scrollbar($radius: 0, $bgColor: #fff) {
   $final-radius: if($radius == round, 8px, $radius);
   &::-webkit-scrollbar {
     width: 8px;
@@ -55,7 +55,7 @@
     background-color: #fff;
   }
   &::-webkit-scrollbar-track {
-    background-color: #fff;
+    background-color: $bgColor;
   }
   &::-webkit-scrollbar-thumb {
     background-color: #c7c7c7;
